--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Minha Landing Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="description" content="Conteúdo do meu site." >
     <meta charset="keywords" content="palavras,separadas,por,vírgula">
@@ -24,17 +25,17 @@
                 <h2>PODE ACREDITAR, POR DENTRO É AINDA MAIS BONITO.</h2>
                 <form>
                     <div class="form-wraper">
-                        <p>Nome Completo</p>
+                        <p>*Nome Completo</p>
                         <input type="text" name="nome" required placeholder="Nome">
                     </div><!--form-wraper-->
 
                     <div class="form-wraper">
-                        <p>E-mail</p>
+                        <p>*E-mail</p>
                         <input type="text" name="email" required placeholder="E-mail">
                     </div><!--form-wraper-->
 
                     <div class="form-wraper">
-                        <p>Telefone</p>
+                        <p>*Telefone</p>
                         <input type="text" name="telefone" required placeholder="Telefone">
                     </div><!--form-wraper-->
 
@@ -49,5 +50,54 @@
             </div><!--form-container-->
         </div><!--container-->
     </section><!--cover-form-->
+
+    <section class="chamada">
+        <div class="container">
+                <div><h2>Viva a vida que você sempre sonhou.</h2></div>
+                <div><p>Coberturas e apartamentos de frente para o mar no João Paulo</p></div>
+        </div><!--container-->        
+    </section><!--chamada-->
+
+    <section class="mosaico">
+        <div class="container">
+            <div class="flex-mosaico">
+                <div style="background-image: url('images/mosaico1.jpg');" class="item-1-mosaico"></div><!--item-1-mosaico-->
+
+                <div class="item-2-mosaico">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut cursus id felis a consectetur. Nunc ullamcorper egestas ex vel molestie. Fusce arcu eros, accumsan mollis purus eu, suscipit ullamcorper risus. Nullam elementum, eros quis pellentesque accumsan, quam ligula volutpat nunc, sed faucibus dui nunc eu leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                </div><!--item-2-mosaico-->
+            </div><!--flex-mosaico-->
+
+            <div class="flex-mosaico">
+                <div style="background-image: url('images/mosaico2.jpg');order: 2;" class="item-1-mosaico"></div><!--item-1-mosaico-->
+
+                <div class="item-2-mosaico" style="order: 1;">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut cursus id felis a consectetur. Nunc ullamcorper egestas ex vel molestie. Fusce arcu eros, accumsan mollis purus eu, suscipit ullamcorper risus. Nullam elementum, eros quis pellentesque accumsan, quam ligula volutpat nunc, sed faucibus dui nunc eu leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                </div><!--item-2-mosaico-->
+            </div><!--flex-mosaico-->
+
+            <div class="flex-mosaico">
+                <div style="background-image: url('images/mosaico3.jpg');" class="item-1-mosaico"></div><!--item-1-mosaico-->
+
+                <div class="item-2-mosaico">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut cursus id felis a consectetur. Nunc ullamcorper egestas ex vel molestie. Fusce arcu eros, accumsan mollis purus eu, suscipit ullamcorper risus. Nullam elementum, eros quis pellentesque accumsan, quam ligula volutpat nunc, sed faucibus dui nunc eu leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                </div><!--item-2-mosaico-->
+            </div><!--flex-mosaico-->
+
+            <div class="flex-mosaico">
+                <div style="background-image: url('images/mosaico4.jpg');order: 2;" class="item-1-mosaico"></div><!--item-1-mosaico-->
+
+                <div class="item-2-mosaico" style="order: 1;">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut cursus id felis a consectetur. Nunc ullamcorper egestas ex vel molestie. Fusce arcu eros, accumsan mollis purus eu, suscipit ullamcorper risus. Nullam elementum, eros quis pellentesque accumsan, quam ligula volutpat nunc, sed faucibus dui nunc eu leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                </div><!--item-2-mosaico-->
+            </div><!--flex-mosaico-->
+        </div><!--container-->
+    </section><!--mosaico -->
+
+    <footer>
+        <img src="images/logo1.png" />
+        <p>Todos os direitos reservados</p>
+        <p>Contato: 3323-3321</p>
+    </footer>
 </body>
 </html>
