--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Minha Landing Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="description" content="Conteúdo do meu site." >
-    <meta charset="keywords" content="palavras,separadas,por,vírgula">
-    <meta charset="author" content="Klaussio Brunow Carvalho" />
-    <meta charset="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta name="description" content="Conteúdo do meu site." >
+    <meta name="keywords" content="palavras,separadas,por,vírgula">
+    <meta name="author" content="Klaussio Brunow Carvalho" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <meta charset="utf-8" />
 </head>
 <body>
@@ -52,6 +52,7 @@
     </section><!--cover-form-->
 
     <section class="chamada">
+        <div class="icone-seta"></div>
         <div class="container">
                 <div><h2>Viva a vida que você sempre sonhou.</h2></div>
                 <div><p>Coberturas e apartamentos de frente para o mar no João Paulo</p></div>
@@ -95,9 +96,11 @@
     </section><!--mosaico -->
 
     <footer>
-        <img src="images/logo1.png" />
-        <p>Todos os direitos reservados</p>
-        <p>Contato: 3323-3321</p>
+        <div class="container">
+            <a href="index.html"><img src="images/logo1.png" /></a>
+            <p>Todos os direitos reservados</p>
+            <p>Contato: 3323-3321</p>
+        </div><!--container-->
     </footer>
 </body>
 </html>
